# ros2_assembly

./: CMakeLists.txt  launch_ros_10672.yaml  map_server.yaml  package.xml  ros2_assembly.kdev4
.kdev4/: ros2_assembly.kdev4
config/: controllers.yaml  kinematics.yaml  map.yaml  moveit_params.yaml  nav.yaml  ompl_planning.yaml  sweepee_controllers.yaml  sweepee_start_positions.yaml  ur10_start_positions.yaml  ur5_controllers.yaml  ur5_start_positions.yaml
config/srdf/: ur10.srdf
launch/: run_assembly.launch.py
map/: second.pgm  second.yaml
meshes/components/collision/: ati_delta.dae  ati_delta.stl  fuselage.stl  gripper_bb.stl  gripper_stade2k14.stl  hatbox.stl  hatboxBKP.stl  hatbox_cart.stl  popeye_cart.stl  popeye_end_effector.dae  popeye_end_effector.stl  popeye_end_effector_link_1.stl  popeye_end_effector_open.stl
meshes/components/visual/: camera_popeye.stl  fuselage_nopanelfixing.stl  gripper_bb.stl  gripper_stade2k14.stl  popeye_cart.stl  popeye_end_effector.dae  popeye_end_effector_link_0.stl  popeye_gripper_fix_part.stl  popeye_gripper_moveable_part.stl
rviz/: model.rviz
src/: param_node.cpp  run_moveit_cpp.cpp
urdf/: sick_lms1xx.urdf.xacro  system.urdf.xacro  ur10.urdf.xacro  ur5.urdf.xacro
urdf/components/: ati_delta.urdf  ati_delta.xacro  ati_ft_delta6060.xacro  camera_popeye.xacro  extension.gazebo.xacro  fuselage.xacro  hatbox.xacro  hatbox_cart.xacro  hatbox_clamper.xacro  popeye_cart.xacro
urdf/sweepee/: pd.urdf  sweepee.gazebo.xacro  sweepee.urdf.xacro  sweepee.xacro  sweepee2.urdf.xacro
